--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Nextstacks",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongodb": "^4.7.0",
     "nodemon": "^2.0.16"
